--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1594,23 +1594,25 @@ legend.collapse-processed a:visited {
   #header.sticky-header .panel-col-first,
   #header.sticky-header .panel-col-last {
     display: none; }
+  #header.sticky-header .panel-col {
+    text-align: center; }
   #header.sticky-header .pane-page-slogan {
     display: none; }
-  #header.sticky-header .pane-page-site-name {
+  #header.sticky-header .pane-page-site-name a {
     display: inline-block;
-    font-size: 7vw;
+    font-size: 48px;
     text-indent: 0;
     letter-spacing: normal;
-    line-height: 1; }
-    @media (min-width: 718px) {
-      #header.sticky-header .pane-page-site-name {
-        font-size: 4vw;
-        margin-left: 0.5em; } }
-    @media (min-width: 1201px) {
-      #header.sticky-header .pane-page-site-name {
-        font-size: 48px; } }
+    line-height: 1.3;
+    margin-left: 0;
+    margin-right: 1em; }
   #header.sticky-header #logo img {
     vertical-align: baseline; }
+  #header.sticky-header #superfish-1 {
+    text-align: center; }
+    #header.sticky-header #superfish-1 li.sf-depth-1 {
+      display: inline-block;
+      float: none; }
 
 .maintenance-page .l-page {
   height: 100vh;
@@ -2087,5 +2089,4 @@ td {
         color: #777;
         padding-bottom: 2px;
         background: transparent; }
-
 /*# sourceMappingURL=wwm-marina-omega.styles.css.map */
