--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -214,28 +214,34 @@
   .panel-col-last {
       display: none;
   }
+  .panel-col {
+    text-align: center;
+  }
 
   .pane-page-slogan {
     display: none;
   }
 
-  .pane-page-site-name {
+  .pane-page-site-name a {
     display: inline-block;
-    font-size: 7vw;
+    font-size: 48px;
     text-indent: 0;
     letter-spacing: normal;
-    line-height: 1;
-
-    @include breakpoint(718px) {
-      font-size: 4vw;
-      margin-left: 0.5em;
-    }
-    @include breakpoint(1201px) {
-      font-size: 48px;
-    }
+    line-height: 1.3;
+    margin-left: 0;
+    margin-right: 1em
   }
 
   #logo img {
     vertical-align: baseline;
+  }
+
+  #superfish-1 {
+    text-align: center;
+
+    li.sf-depth-1 {
+      display: inline-block;
+      float: none;
+    }
   }
 }
