--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1605,7 +1605,9 @@ legend.collapse-processed a:visited {
     letter-spacing: normal;
     line-height: 1.3;
     margin-left: 0;
-    margin-right: 1em; }
+    margin-right: 0.5em; }
+  #header.sticky-header .pane-widgets-s-socialmedia-share-default {
+    display: inline-block; }
   #header.sticky-header #logo img {
     vertical-align: baseline; }
   #header.sticky-header #superfish-1 {
@@ -2089,4 +2091,5 @@ td {
         color: #777;
         padding-bottom: 2px;
         background: transparent; }
+
 /*# sourceMappingURL=wwm-marina-omega.styles.css.map */
