--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -229,7 +229,11 @@
     letter-spacing: normal;
     line-height: 1.3;
     margin-left: 0;
-    margin-right: 1em
+    margin-right: 0.5em
+  }
+
+  .pane-widgets-s-socialmedia-share-default {
+    display: inline-block;
   }
 
   #logo img {
