--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -210,12 +210,21 @@
   .panel-col-bottom {
       display: none;
   }
+  .panel-col-first {
+    display: inline-block;
+
+    @include breakpoint(502px) {
+      display: none;
+    }
+  }
   .panel-col-first,
   .panel-col-last {
       display: none;
   }
   .panel-col {
     text-align: center;
+    width: 100%;
+    flex: 1;
   }
 
   .pane-page-slogan {
@@ -223,17 +232,27 @@
   }
 
   .pane-page-site-name a {
-    display: inline-block;
-    font-size: 48px;
+    display: none;
+    font-size: 36px;
     text-indent: 0;
     letter-spacing: normal;
     line-height: 1.3;
     margin-left: 0;
-    margin-right: 0.5em
+    margin-right: 0.5em;
+
+    @include breakpoint(502px) {
+      display: inline-block;
+    }
   }
 
   .pane-widgets-s-socialmedia-share-default {
     display: inline-block;
+
+    img {
+      width: 4vw;
+      max-width: 32px;
+      min-width: 25px;
+    }
   }
 
   #logo img {
