--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1629,7 +1629,9 @@ legend.collapse-processed a:visited {
     display: inline-block;
     margin-right: 0; }
     #header.sticky-header #logo img {
-      vertical-align: baseline; }
+      vertical-align: baseline;
+      width: 45px;
+      height: 45px; }
   #header.sticky-header #superfish-1 {
     text-align: center; }
     #header.sticky-header #superfish-1 li.sf-depth-1 {
