--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1654,6 +1654,10 @@ legend.collapse-processed a:visited {
   display: inline-block; }
 .maintenance-page #header-site-info {
   width: 100%; }
+.maintenance-page #mini-panel-header .panel-col {
+  -webkit-box-flex: 0;
+      -ms-flex: 0;
+          flex: 0; }
 .maintenance-page h1.pane-page-site-name a {
   font-family: 'Yesteryear', Verdana, Geneva, Arial, Helvetica, sans-serif; }
 .maintenance-page .l-main {
