--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -224,32 +224,39 @@
     display: none;
   }
 
-  .pane-page-site-name a {
-    display: none;
-    font-size: 36px;
-    text-indent: 0;
-    letter-spacing: normal;
-    line-height: 1.3;
-    margin-left: 0;
-    margin-right: 0.5em;
+  .pane-page-site-name {
+    vertical-align: middle;
 
-    @include breakpoint(502px) {
-      display: inline-block;
+    a {
+      display: none;
+      font-size: 36px;
+      text-indent: 0;
+      letter-spacing: normal;
+      line-height: 1.3;
+      margin-left: 0;
+      margin-right: 0.5em;
+      text-shadow: #7b7b7b -2px 0px 1px;
+  
+      @include breakpoint(502px) {
+        display: inline-block;
+      }
     }
   }
 
   .pane-widgets-s-socialmedia-share-default {
     display: inline-block;
+    vertical-align: middle;
 
     img {
       width: 4vw;
-      max-width: 32px;
+      max-width: 28px;
       min-width: 25px;
     }
   }
 
   .pane-page-logo {
     display: inline-block;
+    vertical-align: middle;
     
     @include breakpoint(502px) {
       display: none;
@@ -263,8 +270,8 @@
 
     img {
       vertical-align: baseline;
-      width: 45px;
-      height: 45px;
+      width: 35px;
+      height: 35px;
     }
   }
 
