--- a/sass/pages/maintenance.scss
+++ b/sass/pages/maintenance.scss
@@ -1,3 +1,6 @@
+@import "../../bower_components/breakpoint-sass/stylesheets/breakpoint";
+@import "../abstractions/_mixins.scss";
+
 .maintenance-page {
   .l-page {
     height: 100vh;
