Fix views admin search alignment

--- a/css/admin.css
+++ b/css/admin.css
@@ -1,5 +1,5 @@
 /* Fluid Typography */
-#ctools-export-ui-list-form .form-item-search {
+#ctools-export-ui-list-form .form-item-search label {
   display: inline;
   float: none;
   vertical-align: middle;
