Fix module filter table header alignment

--- a/css/admin.css
+++ b/css/admin.css
@@ -4,4 +4,8 @@
   float: none;
   vertical-align: middle;
 }
+
+#module-filter-modules table.module-filter-tabs-processed thead {
+  display: table-header-group;
+}
 /*# sourceMappingURL=admin.css.map */
