Add panopoly page node styling

--- a/sass/pages/blog_pages.scss
+++ b/sass/pages/blog_pages.scss
@@ -535,7 +535,8 @@
 
 .node-type-article-post,
 .node-type-panopoly-news-article,
-.node-type-panopoly-faq {
+.node-type-panopoly-faq,
+.node-type-panopoly-page {
   .pane-node-title-field {
     text-align: center;
 
