--- a/css/blog_pages.css
+++ b/css/blog_pages.css
@@ -750,26 +750,30 @@
 
 .node-type-article-post .pane-node-title-field,
 .node-type-panopoly-news-article .pane-node-title-field,
-.node-type-panopoly-faq .pane-node-title-field {
+.node-type-panopoly-faq .pane-node-title-field,
+.node-type-panopoly-page .pane-node-title-field {
   text-align: center;
 }
 
 .node-type-article-post .pane-node-title-field .field__item > *,
 .node-type-panopoly-news-article .pane-node-title-field .field__item > *,
-.node-type-panopoly-faq .pane-node-title-field .field__item > * {
+.node-type-panopoly-faq .pane-node-title-field .field__item > *,
+.node-type-panopoly-page .pane-node-title-field .field__item > * {
   margin-top: 0;
 }
 
 .node-type-article-post .field--name-field-featured-image,
 .node-type-panopoly-news-article .field--name-field-featured-image,
-.node-type-panopoly-faq .field--name-field-featured-image {
+.node-type-panopoly-faq .field--name-field-featured-image,
+.node-type-panopoly-page .field--name-field-featured-image {
   width: 100%;
 }
 
 @media (min-width: 481px) {
   .node-type-article-post .field--name-field-featured-image,
   .node-type-panopoly-news-article .field--name-field-featured-image,
-  .node-type-panopoly-faq .field--name-field-featured-image {
+  .node-type-panopoly-faq .field--name-field-featured-image,
+  .node-type-panopoly-page .field--name-field-featured-image {
     margin: 0 1em 1em 0;
     width: 50%;
     float: left;
@@ -778,7 +782,8 @@
 
 .node-type-article-post .field--name-field-featured-image img,
 .node-type-panopoly-news-article .field--name-field-featured-image img,
-.node-type-panopoly-faq .field--name-field-featured-image img {
+.node-type-panopoly-faq .field--name-field-featured-image img,
+.node-type-panopoly-page .field--name-field-featured-image img {
   max-width: 100%;
   min-width: 0;
   height: auto;
@@ -787,14 +792,16 @@
 
 .node-type-article-post .field--name-field-categories,
 .node-type-panopoly-news-article .field--name-field-categories,
-.node-type-panopoly-faq .field--name-field-categories {
+.node-type-panopoly-faq .field--name-field-categories,
+.node-type-panopoly-page .field--name-field-categories {
   margin-top: 1em;
   font-weight: bold;
 }
 
 .node-type-article-post .row,
 .node-type-panopoly-news-article .row,
-.node-type-panopoly-faq .row {
+.node-type-panopoly-faq .row,
+.node-type-panopoly-page .row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -807,7 +814,8 @@
 
 .node-type-article-post .radix-layouts-content,
 .node-type-panopoly-news-article .radix-layouts-content,
-.node-type-panopoly-faq .radix-layouts-content {
+.node-type-panopoly-faq .radix-layouts-content,
+.node-type-panopoly-page .radix-layouts-content {
   -webkit-box-flex: 1;
       -ms-flex: 1 100%;
           flex: 1 100%;
@@ -817,7 +825,8 @@
 @media (min-width: 848px) {
   .node-type-article-post .radix-layouts-content,
   .node-type-panopoly-news-article .radix-layouts-content,
-  .node-type-panopoly-faq .radix-layouts-content {
+  .node-type-panopoly-faq .radix-layouts-content,
+  .node-type-panopoly-page .radix-layouts-content {
     -webkit-box-flex: 3;
         -ms-flex: 3 0 560px;
             flex: 3 0 560px;
@@ -828,7 +837,8 @@
 
 .node-type-article-post .radix-layouts-sidebar,
 .node-type-panopoly-news-article .radix-layouts-sidebar,
-.node-type-panopoly-faq .radix-layouts-sidebar {
+.node-type-panopoly-faq .radix-layouts-sidebar,
+.node-type-panopoly-page .radix-layouts-sidebar {
   -webkit-box-flex: 1;
       -ms-flex: 1 300px;
           flex: 1 300px;
@@ -839,7 +849,8 @@
 @media (min-width: 848px) {
   .node-type-article-post .radix-layouts-sidebar,
   .node-type-panopoly-news-article .radix-layouts-sidebar,
-  .node-type-panopoly-faq .radix-layouts-sidebar {
+  .node-type-panopoly-faq .radix-layouts-sidebar,
+  .node-type-panopoly-page .radix-layouts-sidebar {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 250px;
             flex: 1 1 250px;
@@ -849,25 +860,29 @@
 
 .node-type-article-post .radix-layouts-sidebar .boxed,
 .node-type-panopoly-news-article .radix-layouts-sidebar .boxed,
-.node-type-panopoly-faq .radix-layouts-sidebar .boxed {
+.node-type-panopoly-faq .radix-layouts-sidebar .boxed,
+.node-type-panopoly-page .radix-layouts-sidebar .boxed {
   padding-top: 2em;
 }
 
 .node-type-article-post .radix-layouts-sidebar .pane-card-cycles-card-slideshow,
 .node-type-panopoly-news-article .radix-layouts-sidebar .pane-card-cycles-card-slideshow,
-.node-type-panopoly-faq .radix-layouts-sidebar .pane-card-cycles-card-slideshow {
+.node-type-panopoly-faq .radix-layouts-sidebar .pane-card-cycles-card-slideshow,
+.node-type-panopoly-page .radix-layouts-sidebar .pane-card-cycles-card-slideshow {
   margin-top: 1em;
 }
 
 .node-type-article-post .radix-layouts-sidebar .boxed,
 .node-type-panopoly-news-article .radix-layouts-sidebar .boxed,
-.node-type-panopoly-faq .radix-layouts-sidebar .boxed {
+.node-type-panopoly-faq .radix-layouts-sidebar .boxed,
+.node-type-panopoly-page .radix-layouts-sidebar .boxed {
   padding-top: 1em;
 }
 
 .node-type-article-post .radix-layouts-sidebar .boxed .pane-title,
 .node-type-panopoly-news-article .radix-layouts-sidebar .boxed .pane-title,
-.node-type-panopoly-faq .radix-layouts-sidebar .boxed .pane-title {
+.node-type-panopoly-faq .radix-layouts-sidebar .boxed .pane-title,
+.node-type-panopoly-page .radix-layouts-sidebar .boxed .pane-title {
   position: static;
   margin-bottom: 0.5em;
   margin-top: 0;
@@ -875,7 +890,8 @@
 
 .node-type-article-post .radix-layouts-sidebar .views-slideshow-cycle-main-frame-row-item.boxed,
 .node-type-panopoly-news-article .radix-layouts-sidebar .views-slideshow-cycle-main-frame-row-item.boxed,
-.node-type-panopoly-faq .radix-layouts-sidebar .views-slideshow-cycle-main-frame-row-item.boxed {
+.node-type-panopoly-faq .radix-layouts-sidebar .views-slideshow-cycle-main-frame-row-item.boxed,
+.node-type-panopoly-page .radix-layouts-sidebar .views-slideshow-cycle-main-frame-row-item.boxed {
   padding-top: 2em;
 }
 
