Tabs secondary style

--- a/sass/components/_tabs.scss
+++ b/sass/components/_tabs.scss
@@ -47,7 +47,8 @@
 	}
 }
 
-.tabs--secondary {
+.tabs--secondary,
+.tabs.secondary {
 	clear: both;
 	border-bottom: 1px solid #555;
 	margin-bottom: 10px;
