--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1445,17 +1445,20 @@ td {
   background-color: transparent;
 }
 
-.tabs--secondary {
+.tabs--secondary,
+.tabs.secondary {
   clear: both;
   border-bottom: 1px solid #555;
   margin-bottom: 10px;
   text-transform: lowercase;
 }
-.tabs--secondary li {
+.tabs--secondary li,
+.tabs.secondary li {
   margin: 0 10px;
   padding: 0;
 }
-.tabs--secondary li a {
+.tabs--secondary li a,
+.tabs.secondary li a {
   background-color: transparent;
   border: none;
   color: #555;
@@ -1466,7 +1469,10 @@ td {
   text-decoration: none;
   white-space: nowrap;
 }
-.tabs--secondary li a:hover, .tabs--secondary li a:focus, .tabs--secondary li a.active {
+.tabs--secondary li a:hover, .tabs--secondary li a:focus, .tabs--secondary li a.active,
+.tabs.secondary li a:hover,
+.tabs.secondary li a:focus,
+.tabs.secondary li a.active {
   border-bottom: 4px solid #555;
   color: #777;
   padding-bottom: 2px;
