--- a/css/content_page_nodequeue.css
+++ b/css/content_page_nodequeue.css
@@ -7,6 +7,8 @@
   -webkit-box-direction: normal;
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
+  margin-left: -0.5em;
+  margin-right: -0.5em;
 }
 
 .content-page-nodequeue .view-home-page-nodequeue-view .view-content .views-row {
@@ -14,5 +16,31 @@
       -ms-flex: 1 1 250px;
           flex: 1 1 250px;
   margin: 0.5em;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column nowrap;
+          flex-flow: column nowrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.content-page-nodequeue .view-home-page-nodequeue-view .view-content .views-row .views-field-title {
+  text-align: center;
+}
+
+.content-page-nodequeue .view-home-page-nodequeue-view .view-content .views-row .views-field-field-teaser-link-text {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-bottom: 1em;
+  color: red;
+  font-weight: bold;
+  text-align: center;
+}
+
+.content-page-nodequeue .view-home-page-nodequeue-view .view-content .views-row .views-field-nodequeue-links ul.links {
+  margin: 0;
+  padding: 0;
 }
 /*# sourceMappingURL=content_page_nodequeue.css.map */
