Add spacing between the title and the primary image

--- a/css/content_page_nodequeue.css
+++ b/css/content_page_nodequeue.css
@@ -27,6 +27,7 @@
 
 .content-page-nodequeue .view-home-page-nodequeue-view .view-content .views-row .views-field-title {
   text-align: center;
+  margin-bottom: 0.5em;
 }
 
 .content-page-nodequeue .view-home-page-nodequeue-view .view-content .views-row .views-field-field-teaser-link-text {
