--- a/sass/pages/content_page_nodequeue.scss
+++ b/sass/pages/content_page_nodequeue.scss
@@ -16,6 +16,7 @@
 
 			.views-field-title {
 				text-align: center;
+				margin-bottom: 0.5em;
 			}
 			.views-field-field-teaser-link-text {
 				flex: 1;
