--- a/sass/pages/node_edit_forms.scss
+++ b/sass/pages/node_edit_forms.scss
@@ -23,3 +23,13 @@
 		}
 	}
 }
+
+.node-form {
+	background-color: white;
+	border-color: #cccccc;
+	border-style: solid;
+	border-radius: 5px;
+	border-width: 1px;
+	padding: 1em;
+	margin: .5em 0;
+}
