--- a/css/content_page_nodequeue_teasers.css
+++ b/css/content_page_nodequeue_teasers.css
@@ -11,25 +11,28 @@
   margin-right: -0.5em;
 }
 
-.view-home-page-nodequeue-view.view-display-id-panel_pane_2 .view-content .views-row .panelizer-view-mode {
+.view-home-page-nodequeue-view.view-display-id-panel_pane_2 .view-content .views-row {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 250px;
           flex: 1 1 250px;
+}
+
+.view-home-page-nodequeue-view.view-display-id-panel_pane_2 .view-content .views-row .panelizer-view-mode {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-flow: column nowrap;
           flex-flow: column nowrap;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
 }
 
-.view-home-page-nodequeue-view.view-display-id-panel_pane_2 .view-content .views-row .panelizer-view-mode .field--name-title-field {
+.view-home-page-nodequeue-view.view-display-id-panel_pane_2 .view-content .views-row .field--name-title-field {
   text-align: center;
   margin-bottom: 0.5em;
 }
 
-.view-home-page-nodequeue-view.view-display-id-panel_pane_2 .view-content .views-row .panelizer-view-mode .pane-node-field-teaser-link-text {
+.view-home-page-nodequeue-view.view-display-id-panel_pane_2 .view-content .views-row .pane-node-field-teaser-link-text {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
@@ -37,12 +40,12 @@
   text-align: center;
 }
 
-.view-home-page-nodequeue-view.view-display-id-panel_pane_2 .view-content .views-row .panelizer-view-mode .pane-node-field-teaser-link-text a {
+.view-home-page-nodequeue-view.view-display-id-panel_pane_2 .view-content .views-row .pane-node-field-teaser-link-text a {
   color: red;
   font-weight: bold;
 }
 
-.view-home-page-nodequeue-view.view-display-id-panel_pane_2 .view-content .views-row .panelizer-view-mode .pane-node-links ul.links {
+.view-home-page-nodequeue-view.view-display-id-panel_pane_2 .view-content .views-row .pane-node-links ul.links {
   margin: 0;
   padding: 0;
 }
