--- a/sass/pages/content_page_nodequeue_teasers.scss
+++ b/sass/pages/content_page_nodequeue_teasers.scss
@@ -17,6 +17,9 @@
 			height: 100%;
 		}
 
+		.field--name-field-featured-image {
+			text-align: center;
+		}
 		.field--name-title-field {
 			text-align: center;
 			margin-bottom: 0.5em;
