--- a/sass/pages/node_edit_forms.scss
+++ b/sass/pages/node_edit_forms.scss
@@ -24,12 +24,15 @@
 	}
 }
 
-.node-form {
-	background-color: white;
-	border-color: #cccccc;
-	border-style: solid;
-	border-radius: 5px;
-	border-width: 1px;
-	padding: 1em;
-	margin: .5em 0;
+.page-node-add,
+.page-node-edit {
+	#content {
+		background-color: white;
+		border-color: #cccccc;
+		border-style: solid;
+		border-radius: 5px;
+		border-width: 1px;
+		padding: 1em;
+		margin: .5em 0;
+	}
 }
