--- a/sass/pages/categories_view.scss
+++ b/sass/pages/categories_view.scss
@@ -20,8 +20,9 @@
 			text-align: center;
 
 			img {
-				max-width: 250px;
+				max-width: 300px;
 				width: 100%;
+				height: auto;
 			}
 		}
 	}
