--- a/css/category_term_pages.css
+++ b/css/category_term_pages.css
@@ -1,5 +1,65 @@
 /* Fluid Typography */
-.section-categories.page-taxonomy-term .view-panopoly-taxonomy.view-content {
+.section-categories.page-taxonomy-term .row-one {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  margin-left: -0.5em;
+  margin-right: -0.5em;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+
+.section-categories.page-taxonomy-term .row-one .main-content {
+  -webkit-box-flex: 3;
+      -ms-flex: 3 1 300px;
+          flex: 3 1 300px;
+  margin: 0.5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+}
+
+.section-categories.page-taxonomy-term .row-one .pane-taxonomy-term-field-featured-image {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 0px;
+          flex: 1 1 0;
+  margin: 0 0.5em;
+}
+
+.section-categories.page-taxonomy-term .row-one .pane-taxonomy-term-field-featured-image img {
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+  margin: 0;
+}
+
+.section-categories.page-taxonomy-term .row-one .pane-term-description {
+  -webkit-box-flex: 2;
+      -ms-flex: 2 1 0px;
+          flex: 2 1 0;
+}
+
+.section-categories.page-taxonomy-term .row-one .sidebar-content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 0px;
+          flex: 1 1 0;
+  margin: 0.5em;
+}
+
+.section-categories.page-taxonomy-term .row-one .sidebar-content .pane-views-68df6443216479c90da4235283a03ab4 {
+  margin: 0;
+}
+
+.section-categories.page-taxonomy-term .view-panopoly-taxonomy .view-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -11,23 +71,23 @@
   margin-right: -0.5em;
 }
 
-.section-categories.page-taxonomy-term .view-panopoly-taxonomy.view-content .views-row {
+.section-categories.page-taxonomy-term .view-panopoly-taxonomy .view-content .views-row {
   -webkit-box-flex: 2;
       -ms-flex: 2 1 300px;
           flex: 2 1 300px;
   margin: 0.5em;
 }
 
-.section-categories.page-taxonomy-term .view-panopoly-taxonomy.view-content .views-field-title-field {
+.section-categories.page-taxonomy-term .view-panopoly-taxonomy .view-content .views-field-title-field {
   text-align: center;
   margin-bottom: 0.5em;
 }
 
-.section-categories.page-taxonomy-term .view-panopoly-taxonomy.view-content .views-field-field-featured-image {
+.section-categories.page-taxonomy-term .view-panopoly-taxonomy .view-content .views-field-field-featured-image {
   text-align: center;
 }
 
-.section-categories.page-taxonomy-term .view-panopoly-taxonomy.view-content .views-field-field-featured-image img {
+.section-categories.page-taxonomy-term .view-panopoly-taxonomy .view-content .views-field-field-featured-image img {
   max-width: 300px;
   width: 100%;
   height: auto;
