--- a/sass/pages/category_term_pages.scss
+++ b/sass/pages/category_term_pages.scss
@@ -35,6 +35,7 @@
 		.sidebar-content {
 			flex: 1 1 0;
 			margin: 0.5em;
+			display: flex;
 
 			.pane-views-68df6443216479c90da4235283a03ab4 {
 				margin: 0;
@@ -65,5 +66,13 @@
 				height: auto;
 			}
 		}
+	}
+
+	.views-exposed-form .views-exposed-widget {
+	    display: inline-block;
+	    float: none;
+	    min-width: 0;
+	    max-width: 100%;
+	    vertical-align: top;
 	}
 }
