--- a/sass/pages/testimonial-nodes.scss
+++ b/sass/pages/testimonial-nodes.scss
@@ -11,6 +11,11 @@
 		border-radius: 5px;
 		border-width: 1px;
 		padding: 1em;
+		margin: 0 1em 1em 1em;
+
+		@include breakpoint(992px) {
+			width: calc(66.66666666666666% - 2em);
+		}
 
 		.pane-node-title {
 			text-align: center;
@@ -26,6 +31,11 @@
 		border-radius: 5px;
 		border-width: 1px;
 		padding: 1em;
+		margin: 0 1em 1em 1em;
+
+		@include breakpoint(992px) {
+			width: calc(75% - 2em);
+		}
 
 		.pane-node-title {
 			text-align: center;
