Image and video spacing and alignment

--- a/css/testimonial-nodes.css
+++ b/css/testimonial-nodes.css
@@ -25,6 +25,16 @@
   text-align: center;
 }
 
+.node-type-client-audio-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-image-testimonial,
+.node-type-client-audio-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-video-testimonial,
+.node-type-client-image-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-image-testimonial,
+.node-type-client-image-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-video-testimonial,
+.node-type-client-video-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-image-testimonial,
+.node-type-client-video-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-video-testimonial {
+  margin: 1em 0;
+  text-align: center;
+}
+
 .node-type-client-written-testimonial #content .radix-bryant-flipped .radix-layouts-content {
   background-color: white;
   border-color: #cccccc;
