--- a/sass/pages/testimonial-nodes.scss
+++ b/sass/pages/testimonial-nodes.scss
@@ -20,6 +20,12 @@
 		.pane-node-title {
 			text-align: center;
 		}
+
+		.pane-node-field-image-testimonial,
+		.pane-node-field-video-testimonial {
+			margin: 1em 0;
+			text-align: center;
+		}
 	}
 }
 
