--- a/sass/pages/testimonial-nodes.scss
+++ b/sass/pages/testimonial-nodes.scss
@@ -22,7 +22,8 @@
 		}
 
 		.pane-node-field-image-testimonial,
-		.pane-node-field-video-testimonial {
+		.pane-node-field-video-testimonial,
+		.pane-node-field-audio-testimonial {
 			margin: 1em 0;
 			text-align: center;
 		}
