--- a/css/testimonial-nodes.css
+++ b/css/testimonial-nodes.css
@@ -57,4 +57,22 @@
 .node-type-client-written-testimonial #content .radix-bryant-flipped .radix-layouts-content .pane-node-title {
   text-align: center;
 }
+
+.node-type-client-image-testimonial .col-md-8 > .row:nth-child(2) {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.node-type-client-image-testimonial .col-md-8 > .row:nth-child(2) .radix-layouts-contentcolumn1 {
+  flex: 1 1 300px;
+}
+
+.node-type-client-image-testimonial .col-md-8 > .row:nth-child(2) .radix-layouts-contentcolumn2 {
+  flex: 1 1 50%;
+}
+
+.node-type-client-image-testimonial .field--name-field-image-testimonial img {
+  max-width: 100%;
+  height: auto;
+}
 /*# sourceMappingURL=testimonial-nodes.css.map */
