--- a/sass/pages/testimonial-nodes.scss
+++ b/sass/pages/testimonial-nodes.scss
@@ -67,3 +67,10 @@
 		height: auto;
 	}
 }
+
+.node-type-client-audio-testimonial {
+	.field--name-field-image-testimonial img,
+	.field--name-field-audio-testimonial audio {
+		max-width: 100%;
+	}
+}
