Testimonial video styling

--- a/css/testimonial-nodes.css
+++ b/css/testimonial-nodes.css
@@ -80,4 +80,30 @@
 .node-type-client-audio-testimonial .field--name-field-audio-testimonial audio {
   max-width: 100%;
 }
+
+.node-type-client-video-testimonial #content .radix-bryant-flipped .col-md-9 {
+  background-color: white;
+  border-color: #cccccc;
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 1px;
+  padding: 1em;
+  margin: 0 1em 1em 1em;
+}
+
+@media (min-width: 992px) {
+  .node-type-client-video-testimonial #content .radix-bryant-flipped .col-md-9 {
+    width: calc(75% - 2em);
+  }
+}
+
+.node-type-client-video-testimonial #content .radix-bryant-flipped .col-md-9 .pane-node-title {
+  text-align: center;
+}
+
+.node-type-client-video-testimonial #content .radix-bryant-flipped .col-md-9 .pane-node-field-video-testimonial {
+  float: left;
+  margin: 1em 1em 0 0;
+  text-align: center;
+}
 /*# sourceMappingURL=testimonial-nodes.css.map */
