--- a/sass/pages/testimonial-nodes.scss
+++ b/sass/pages/testimonial-nodes.scss
@@ -99,10 +99,12 @@
 		margin: 1em 0;
 		text-align: center;
 		width: 100%;
+		max-width: 100%;
 
 		@include breakpoint(720px) {
 			float: left;
 			margin: 1em 1em 0 0;
+			max-width: 420px;
 		}
 
 		.field--name-field-video-testimonial {
