--- a/css/testimonial-nodes.css
+++ b/css/testimonial-nodes.css
@@ -1,7 +1,5 @@
 /* Fluid Typography */
-.node-type-client-audio-testimonial #content .radix-selby-flipped .col-md-8,
-.node-type-client-image-testimonial #content .radix-selby-flipped .col-md-8,
-.node-type-client-video-testimonial #content .radix-selby-flipped .col-md-8 {
+.node-type-client-audio-testimonial #content .radix-selby-flipped .col-md-8 {
   background-color: white;
   border-color: #cccccc;
   border-style: solid;
@@ -12,30 +10,25 @@
 }
 
 @media (min-width: 992px) {
-  .node-type-client-audio-testimonial #content .radix-selby-flipped .col-md-8,
-  .node-type-client-image-testimonial #content .radix-selby-flipped .col-md-8,
-  .node-type-client-video-testimonial #content .radix-selby-flipped .col-md-8 {
+  .node-type-client-audio-testimonial #content .radix-selby-flipped .col-md-8 {
     width: calc(66.66666666666666% - 2em);
   }
 }
 
-.node-type-client-audio-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-title,
-.node-type-client-image-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-title,
-.node-type-client-video-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-title {
+.node-type-client-audio-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-title {
   text-align: center;
 }
 
-.node-type-client-audio-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-image-testimonial,
-.node-type-client-audio-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-video-testimonial,
-.node-type-client-audio-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-audio-testimonial,
-.node-type-client-image-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-image-testimonial,
-.node-type-client-image-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-video-testimonial,
-.node-type-client-image-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-audio-testimonial,
-.node-type-client-video-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-image-testimonial,
-.node-type-client-video-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-video-testimonial,
-.node-type-client-video-testimonial #content .radix-selby-flipped .col-md-8 .pane-node-field-audio-testimonial {
+.node-type-client-audio-testimonial .pane-node-field-image-testimonial,
+.node-type-client-audio-testimonial .pane-node-field-video-testimonial,
+.node-type-client-audio-testimonial .pane-node-field-audio-testimonial {
   margin: 1em 0;
   text-align: center;
+}
+
+.node-type-client-audio-testimonial .field--name-field-image-testimonial img,
+.node-type-client-audio-testimonial .field--name-field-audio-testimonial audio {
+  max-width: 100%;
 }
 
 .node-type-client-written-testimonial #content .radix-bryant-flipped .radix-layouts-content {
@@ -58,27 +51,29 @@
   text-align: center;
 }
 
-.node-type-client-image-testimonial .col-md-8 > .row:nth-child(2) {
-  display: flex;
-  flex-flow: row wrap;
+.node-type-client-image-testimonial #content .radix-burr-flipped .col-md-8 {
+  background-color: white;
+  border-color: #cccccc;
+  border-style: solid;
+  border-radius: 5px;
+  border-width: 1px;
+  padding: 1em;
+  margin: 0 1em 1em 1em;
 }
 
-.node-type-client-image-testimonial .col-md-8 > .row:nth-child(2) .radix-layouts-contentcolumn1 {
-  flex: 1 1 300px;
+@media (min-width: 992px) {
+  .node-type-client-image-testimonial #content .radix-burr-flipped .col-md-8 {
+    width: calc(66.666667% - 2em);
+  }
 }
 
-.node-type-client-image-testimonial .col-md-8 > .row:nth-child(2) .radix-layouts-contentcolumn2 {
-  flex: 1 1 50%;
+.node-type-client-image-testimonial #content .radix-burr-flipped .col-md-8 .pane-node-title {
+  text-align: center;
 }
 
 .node-type-client-image-testimonial .field--name-field-image-testimonial img {
   max-width: 100%;
   height: auto;
-}
-
-.node-type-client-audio-testimonial .field--name-field-image-testimonial img,
-.node-type-client-audio-testimonial .field--name-field-audio-testimonial audio {
-  max-width: 100%;
 }
 
 .node-type-client-video-testimonial #content .radix-burr-flipped .col-md-8 {
